trunk/Archive2/10/233fe857d8a50c/output
main.cpp:9:39: error: no type named 'bar' in 'std::common_type<ChildA, ChildB>'
    std::common_type<ChildA, ChildB>::bar foo = 100;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
1 error generated.
